--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 // @import url("https://fonts.googleapis.com/css?family=Material+Icons|Lato:400|Ubuntu:300,400,500,500i&subset=latin-ext");
-// @import "css-reset-and-normalize";
+@import "css-reset-and-normalize";
 // @import "./libs/spinner";
 
 // @import "./variables";
@@ -9,4 +9,7 @@
 // @import "./weather";
 // @import "./form";
 
-@import './partials/base'
+@import './partials/base';
+@import './partials/keyboard';
+@import './partials/synth-ui';
+@import './modules/mixins'
