--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -1,3 +1,128 @@
+* {
+    box-sizing: border-box;
+}
+
+
+
 body {
-    background-image: url('../../images/background.jpg')
+    background-color: #444;
+
+}
+
+#app {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// knob
+
+@mixin longshadow($original-shadow: "") {
+    box-shadow: makeShadow($original-shadow, 20);
+  }
+
+@function makeShadow($original-shadow, $l) {
+$val: #{$original-shadow}, 0px 0px rgba(0,0,0,0.1);
+@for $i from 1 through $l {
+    $start1: 1;
+    $stop1: $l;
+    $start2: 0.05;
+    $stop2: 0;
+    $opacity: ((($i - $start1)/($stop1 - $start1))*($stop2 - $start2) + $start2);
+    $val: #{$val}, -#{$i - 1}px #{$i}px 2px rgba(0,0,0, $opacity);
+}
+@return $val;
+}
+
+.knob {
+    width: 25%;
+    padding-bottom: 25%;
+    border-radius: 50%;
+    background-color: #eee;
+    position: relative;
+
+    $original-shadow: inset 0 -3px 1px rgba(0,0,0,0.2), 
+                  inset 0 3px 1px rgba(255,255,255,.9);
+    @include longshadow($original-shadow);
+}
+
+
+
+
+// key
+
+@mixin shortshadow($original-shadow: "") {
+    box-shadow: makeShadow($original-shadow, 15);
+  }
+
+.key {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    top: -5px;
+    max-width: 100px;
+    max-height: 50px;
+    margin-left: 2px;
+    background: linear-gradient(to right, #eee, #ccc);
+    border-radius: 0;
+    border-bottom: 10px solid #aaa;
+    transition: all .2s;
+    $original-shadow: inset -2px 0 1px 1px rgba(255,255,255,.7),
+      inset 0 0 8px 8px rgba(128,128,128,.1),
+      inset -10px 4px 10px 2px rgba(0,0,0,0.05);
+
+    @include longshadow($original-shadow);
+
+    &:first-child {
+      border-bottom-left-radius: 4px;
+    }
+
+    &:last-child {
+      border-bottom-right-radius: 4px;
+    }
+
+    @for $i from 1 through 4 {
+      &:nth-child(#{$i}) {
+        z-index: 5-$i;
+      }
+    }
+
+    &.depressed {
+      z-index: 0;
+      background: linear-gradient(to right, #ddd, #ccc);
+      top: 1px;
+      border-bottom: 4px solid #999;
+      $original-shadow: inset -1px 0 1px 1px rgba(255,255,255,.4),
+        inset 0 0 8px 8px rgba(128,128,128,.1),
+        inset -10px 4px 10px 2px rgba(128,128,128,0.05),
+        inset -10px 4px 10px 2px rgba(128,128,128,0.05);
+
+      @include shortshadow($original-shadow);
+
+    }
+
+    &:first-child {
+      margin-left: 0;
+    }
 }
