--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -18,7 +18,29 @@ body {
 }
 
 
+// mixiny
 
+@mixin longshadow($original-shadow: "") {
+    box-shadow: makeShadow($original-shadow, 20);
+}
+
+  @mixin shortshadow($original-shadow: "") {
+    box-shadow: makeShadow($original-shadow, 15);
+}
+
+
+@function makeShadow($original-shadow, $l) {
+    $val: #{$original-shadow}, 0px 0px rgba(0,0,0,0.1);
+    @for $i from 1 through $l {
+        $start1: 1;
+        $stop1: $l;
+        $start2: 0.05;
+        $stop2: 0;
+        $opacity: ((($i - $start1)/($stop1 - $start1))*($stop2 - $start2) + $start2);
+        $val: #{$val}, -#{$i - 1}px #{$i}px 2px rgba(0,0,0, $opacity);
+    }
+    @return $val;
+}
 
 
 
@@ -38,22 +60,7 @@ body {
 
 // knob
 
-@mixin longshadow($original-shadow: "") {
-    box-shadow: makeShadow($original-shadow, 20);
-  }
 
-@function makeShadow($original-shadow, $l) {
-$val: #{$original-shadow}, 0px 0px rgba(0,0,0,0.1);
-@for $i from 1 through $l {
-    $start1: 1;
-    $stop1: $l;
-    $start2: 0.05;
-    $stop2: 0;
-    $opacity: ((($i - $start1)/($stop1 - $start1))*($stop2 - $start2) + $start2);
-    $val: #{$val}, -#{$i - 1}px #{$i}px 2px rgba(0,0,0, $opacity);
-}
-@return $val;
-}
 
 .knob {
     width: 25%;
@@ -71,58 +78,3 @@ $val: #{$original-shadow}, 0px 0px rgba(0,0,0,0.1);
 
 
 // key
-
-@mixin shortshadow($original-shadow: "") {
-    box-shadow: makeShadow($original-shadow, 15);
-  }
-
-.key {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    top: -5px;
-    max-width: 100px;
-    max-height: 50px;
-    margin-left: 2px;
-    background: linear-gradient(to right, #eee, #ccc);
-    border-radius: 0;
-    border-bottom: 10px solid #aaa;
-    transition: all .2s;
-    $original-shadow: inset -2px 0 1px 1px rgba(255,255,255,.7),
-      inset 0 0 8px 8px rgba(128,128,128,.1),
-      inset -10px 4px 10px 2px rgba(0,0,0,0.05);
-
-    @include longshadow($original-shadow);
-
-    &:first-child {
-      border-bottom-left-radius: 4px;
-    }
-
-    &:last-child {
-      border-bottom-right-radius: 4px;
-    }
-
-    @for $i from 1 through 4 {
-      &:nth-child(#{$i}) {
-        z-index: 5-$i;
-      }
-    }
-
-    &.depressed {
-      z-index: 0;
-      background: linear-gradient(to right, #ddd, #ccc);
-      top: 1px;
-      border-bottom: 4px solid #999;
-      $original-shadow: inset -1px 0 1px 1px rgba(255,255,255,.4),
-        inset 0 0 8px 8px rgba(128,128,128,.1),
-        inset -10px 4px 10px 2px rgba(128,128,128,0.05),
-        inset -10px 4px 10px 2px rgba(128,128,128,0.05);
-
-      @include shortshadow($original-shadow);
-
-    }
-
-    &:first-child {
-      margin-left: 0;
-    }
-}
