--- a/src/styles/partials/_keyboard.scss
+++ b/src/styles/partials/_keyboard.scss
@@ -1,55 +1,144 @@
 // grid
 
-#keyboard {
-    height: 120px;
-    width: 100%;
+.row {
+    display: flex;
+    @for $index from 1 through 15 {
+        .col-#{$index} {
+            width: 100% / 15 * $index;
+            
+        }
+    }
+}
+
+// style
+
+
+.key {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    top: -5px;
+    max-width: 100px;
+    max-height: 50px;
+    margin-left: 2px;
+    transition: all .2s;
+    &.white {
+        background: linear-gradient(to right, #eee, #ccc);
+        border-radius: 0;
+        border-bottom: 10px solid #aaa;
+        $original-shadow: inset -2px 0 1px 1px rgba(255,255,255,.7),
+        inset 0 0 8px 8px rgba(128,128,128,.1),
+        inset -10px 4px 10px 2px rgba(0,0,0,0.05);
+    
+        @include longshadow($original-shadow);
+    
+        &:first-child {
+        border-bottom-left-radius: 4px;
+        }
+
+        &:last-child {
+        border-bottom-right-radius: 4px;
+        }
+
+        @for $i from 1 through 4 {
+        &:nth-child(#{$i}) {
+            z-index: 5-$i;
+        }
+        }
+
+        &.depressed {
+            z-index: 0;
+            background: linear-gradient(to right, #ddd, #ccc);
+            top: 1px;
+            border-bottom: 4px solid #999;
+            $original-shadow: inset -1px 0 1px 1px rgba(255,255,255,.4),
+                inset 0 0 8px 8px rgba(128,128,128,.1),
+                inset -10px 4px 10px 2px rgba(128,128,128,0.05),
+                inset -10px 4px 10px 2px rgba(128,128,128,0.05);
+
+            @include shortshadow($original-shadow);
+  
+        }
+  
+      &:first-child {
+        margin-left: 0;
+      }
+
+    }
+
+    &.black {
+        color: white;
+        background: linear-gradient(to right, #555, #333);
+        border-radius: 0;
+        border-bottom: 10px solid #383838;
+        $original-shadow: inset -2px 0 1px 1px rgba(83, 83, 83, 0.7),
+        inset 0 0 8px 8px rgba(63, 63, 63, 0.1),
+        inset -10px 4px 10px 2px rgba(0,0,0,0.05);
+    
+        @include longshadow($original-shadow);
+    
+        &:first-child {
+        border-bottom-left-radius: 4px;
+        }
+
+        &:last-child {
+        border-bottom-right-radius: 4px;
+        }
+
+        @for $i from 1 through 4 {
+        &:nth-child(#{$i}) {
+            z-index: 5-$i;
+        }
+        }
+
+        &.depressed {
+            z-index: 0;
+            background: linear-gradient(to right, #ddd, #ccc);
+            top: 1px;
+            border-bottom: 4px solid #999;
+            $original-shadow: inset -1px 0 1px 1px rgba(255,255,255,.4),
+                inset 0 0 8px 8px rgba(128,128,128,.1),
+                inset -10px 4px 10px 2px rgba(128,128,128,0.05),
+                inset -10px 4px 10px 2px rgba(128,128,128,0.05);
+
+            @include shortshadow($original-shadow);
+  
+        }
+  
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+
 }
 
 
-// #keyboard {
-//     display: flex;
-//     flex-direction: column;
-//     .upper-row {
-//         display: flex;
-//         justify-content: space-around;
-//     }
+#keyboard {
+    height: 120px;
+    width: 100%;
+    .key {
+        font-size: 14px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        span {
+                text-shadow: -1px 1px 10px rgba(34, 33, 33, 0.61);
 
-//     .lower-row {
-//         display: flex;
-//         justify-content: space-around;
-//     }
 
-//     span.key-name {
-//         font-size: 20px;
-//     }
+        }
 
-//     span.note-name {
-//         text-align: right;
-//         font-size: 12px;
-//     }
+    }
 
-//     .key {
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: space-between;
-//         width: 100px;
-//         height: 100px;
-//         padding: 30px;
-//         &.white {
-            
-//             background-image: url(../../images/key_white.png);
-//             background-position: center;
-//             background-size: contain;
-            
-//         }
-//         &.black {
-//             color: white;
-//             background-image: url(../../images/key_black.png);
-//             background-position: center;
-//             background-size: contain;
-//         }
-//     }
+    // span.key-name {
+    //     font-size: 20px;
+    // }
+
+    // span.note-name {
+    //     text-align: right;
+    //     font-size: 12px;
+    // }
+
 
     
-// }
+}
 
