--- a/src/styles/partials/_keyboard.scss
+++ b/src/styles/partials/_keyboard.scss
@@ -93,10 +93,10 @@
 
         &.depressed {
             z-index: 0;
-            background: linear-gradient(to right, #ddd, #ccc);
+            background: linear-gradient(to right, #555, #333);
             top: 1px;
-            border-bottom: 4px solid #999;
-            $original-shadow: inset -1px 0 1px 1px rgba(255,255,255,.4),
+            border-bottom: 4px solid #303030;
+            $original-shadow: inset -1px 0 1px 1px rgba(83, 83, 83, 0.7),
                 inset 0 0 8px 8px rgba(128,128,128,.1),
                 inset -10px 4px 10px 2px rgba(128,128,128,0.05),
                 inset -10px 4px 10px 2px rgba(128,128,128,0.05);
