--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,5 +11,5 @@
 
 @import './partials/base';
 @import './partials/keyboard';
-@import './partials/synth-ui';
+@import './partials/control-panel';
 @import './modules/mixins'
