--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -17,6 +17,20 @@ body {
     align-items: center;
 }
 
+#synthUI {
+    width: 1020px;
+    height: 480px;
+    padding: 60px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: linear-gradient(to bottom, rgb(247, 247, 247), #bbb);
+    box-shadow: inset 0 5px 5px #FFF,
+                0 6px 10px #000,
+                0 15px 20px rgba(0,0,0,0.2);
+}
+
 
 // mixiny
 
