--- a/src/styles/partials/_control-panel.scss
+++ b/src/styles/partials/_control-panel.scss
@@ -1,19 +1,99 @@
 #controlPanel {
     width: 100%;
-    height: calc(100% - 120px);
+    height: calc(100% - 180px);
     display: flex;
     justify-content: space-between;
 
 
 
-
+    #control4 {
+        width: 180px;
+        height: 100%;
+    }
 
 }
 
 
 
-#speaker {
 
+#dbBorder {
+
+    height: 100%;
+    width: 30px;
+    background: rgb(65, 65, 65);
+    padding: 4px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    #dbMeter {
+        background: white;
+        width: 100%;
+        height: 0;
+        background: linear-gradient(to bottom, rgb(164, 255, 225), rgb(255, 255, 255));
+    }
+}
+
+
+
+
+
+#speaker {
     width: 100%;
     height: 100%;
+
+    padding: 0;
+
+    img {
+        width: 100%;
+    }
+
+}
+
+
+
+.knob {
+    width: 50px;
+    height: 50px;
+    border-radius: 40%;
+    background-color: #eee;
+    position: relative;
+
+    $original-shadow: inset 0 -3px 1px rgba(0,0,0,0.2), 
+                    inset 0 3px 1px rgba(255,255,255,.9);
+    @include longshadow($original-shadow);
+}
+
+
+
+#slider-horizontal-3,
+#slider-horizontal-4 {
+  padding: 20px;
+
+  .slider-well {
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: black;
+    position: relative;
+  }
+
+  .slider {
+    position: absolute;
+    left: 0;
+    top: -15px;
+    height: 30px;
+    width: 15px;
+    background: linear-gradient(#ddd, #bbb);
+    border-radius: 2px;
+    border: 1px solid #bbb;
+    border-top: 1px solid #eee;
+    border-bottom: 5px solid #777;
+    $original-shadow:
+      -1px 2px 2px rgba(0,0,0,.4),
+      inset -10px 4px 10px 2px rgba(0,0,0,0.05);
+
+    box-shadow: makeShadow($original-shadow, 7);
+  }
 }
