--- a/src/styles/partials/_control-panel.scss
+++ b/src/styles/partials/_control-panel.scss
@@ -8,6 +8,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        align-items: center;
         .switches {
             display: flex;
         }
@@ -18,7 +19,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        align-items: center;
         .knobs {
+            width: 100%;
             display: flex;
             justify-content: space-around;
         }
@@ -37,16 +40,17 @@
 #dbBorder {
 
     height: 100%;
-    width: 30px;
-    background: rgb(65, 65, 65);
-    padding: 4px;
-
+    width: 20px;
+    background: linear-gradient(to left, rgb(44, 44, 44), #444);
+    padding: 3px;
+    border-radius: 2px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 
     #dbMeter {
         background: white;
+        border-radius: 2px;
         width: 100%;
         height: 0;
         background: linear-gradient(to bottom, rgb(164, 255, 225), rgb(255, 255, 255));
@@ -97,64 +101,80 @@
 
 
 
+// slidery
 
-  .slider-well {
-    width: 100%;
-    height: 1px;
-    border-radius: 4px;
-    background-color: black;
-    position: relative;
+
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 90%; /* Full-width */
+    height: 4px; /* Specified height */
+    border-radius: 2px;
+    background: #000000; /* Grey background */
+    outline: none; /* Remove outline */
+    &::-moz-focus-outer {
+        border: 0;
+    }
   }
-
-  .slider {
-    position: absolute;
-    left: 0;
-    top: -15px;
+  
+  /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
     height: 30px;
-    width: 15px;
+    width: 20px;
     background: linear-gradient(#ddd, #bbb);
     border-radius: 2px;
     border: 1px solid #bbb;
     border-top: 1px solid #eee;
     border-bottom: 5px solid #777;
-    $original-shadow:
-      -1px 2px 2px rgba(0,0,0,.4),
-      inset -10px 4px 10px 2px rgba(0,0,0,0.05);
+    $original-shadow: -1px 2px 2px rgba(0,0,0,.4),
+                    inset -10px 4px 10px 2px rgba(0,0,0,0.05);
+    box-shadow: makeShadow($original-shadow, 7);
+  }
+  
+  .slider::-moz-range-thumb {
 
+    height: 30px;
+    width: 20;
+    background: linear-gradient(#ddd, #bbb);
+    border-radius: 2px;
+    border: 1px solid #bbb;
+    border-top: 1px solid #eee;
+    border-bottom: 5px solid #777;
+    $original-shadow: -1px 2px 2px rgba(0,0,0,.4),
+                    inset -10px 4px 10px 2px rgba(0,0,0,0.05);
     box-shadow: makeShadow($original-shadow, 7);
   }
 
 
 
 
+//   .slider-well {
+//     width: 100%;
+//     height: 4px;
+//     border-radius: 4px;
+//     background-color: black;
+//     position: relative;
+//   }
 
+//   .slider {
+//     position: absolute;
+//     left: 0;
+//     top: -15px;
+//     height: 30px;
+//     width: 15px;
+//     background: linear-gradient(#ddd, #bbb);
+//     border-radius: 2px;
+//     border: 1px solid #bbb;
+//     border-top: 1px solid #eee;
+//     border-bottom: 5px solid #777;
+//     $original-shadow:
+//       -1px 2px 2px rgba(0,0,0,.4),
+//       inset -10px 4px 10px 2px rgba(0,0,0,0.05);
 
-
-  .slider-well {
-    width: 100%;
-    height: 4px;
-    border-radius: 4px;
-    background-color: black;
-    position: relative;
-  }
-
-  .slider {
-    position: absolute;
-    left: 0;
-    top: -15px;
-    height: 30px;
-    width: 15px;
-    background: linear-gradient(#ddd, #bbb);
-    border-radius: 2px;
-    border: 1px solid #bbb;
-    border-top: 1px solid #eee;
-    border-bottom: 5px solid #777;
-    $original-shadow:
-      -1px 2px 2px rgba(0,0,0,.4),
-      inset -10px 4px 10px 2px rgba(0,0,0,0.05);
-
-    box-shadow: makeShadow($original-shadow, 7);
-  }
+//     box-shadow: makeShadow($original-shadow, 7);
+//   }
 
 
 
