--- a/src/styles/partials/_control-panel.scss
+++ b/src/styles/partials/_control-panel.scss
@@ -89,12 +89,13 @@
         content: '';
         display: block;
         position: absolute;
-        top: 0;
+        top: 10px;
         left: 50%;
-        width: 3px;
-        height: 25%;
+        width: 4px;
+        height: 8px;
+        border-radius: 45%;
         transform: rotate(0deg);
-        transform-origin: 50% 200%;
+        transform-origin: 50% 400%;
         background-color: rgb(0, 0, 0);
     }
 }
