adjustments. added build version

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,4 +12,5 @@
 @import './partials/base';
 @import './partials/keyboard';
 @import './partials/control-panel';
-@import './modules/mixins'
+@import './partials/footer-and-info';
+@import './modules/mixins';
