--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,6 @@
-// @import url("https://fonts.googleapis.com/css?family=Material+Icons|Lato:400|Ubuntu:300,400,500,500i&subset=latin-ext");
 @import "css-reset-and-normalize";
-// @import "./libs/spinner";
 
-// @import "./variables";
-// @import "./mixins";
-// @import "./base";
-// @import "./header";
-// @import "./weather";
-// @import "./form";
-
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
 @import './partials/base';
 @import './partials/keyboard';
 @import './partials/control-panel';
