--- a/src/styles/partials/_footer-and-info.scss
+++ b/src/styles/partials/_footer-and-info.scss
@@ -49,8 +49,25 @@
         justify-content: center;
         align-items: center;
         .text-container {
+            color: rgb(201, 201, 201);
+            font-size: 14px;
+            line-height: 20px;
             width: 500px;
             height: 500px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            h1 {
+                font-size: 18px;
+            }
+
+            .icons {
+                display: flex;
+                justify-content: flex-end;
+                img {
+                    margin: 4px;
+                }
+            }
         }
     }
 
