--- a/src/styles/partials/_footer-and-info.scss
+++ b/src/styles/partials/_footer-and-info.scss
@@ -64,8 +64,13 @@
             .icons {
                 display: flex;
                 justify-content: flex-end;
-                img {
+                
+                .icon {
+                    transition: 0.2s;
                     margin: 4px;
+                    &:hover {
+                        transform: scale(1.2);
+                    }
                 }
             }
         }
